--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { 
   "name": "imageConverter",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "dependencies": {}, 
   "devDependencies": {
     "connect": "^2.14.4",
@@ -24,5 +24,6 @@
   },
   "engines": {
     "node": ">=0.10.0"
-  }
+  },
+  "license": "MIT"
 }
